--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,7 +13,7 @@
     <body>
     
         <div class="page-header">
-            <h1><a href="">Django Girls Blog</a></h1>
+            <h1><a href="">Olaf Blog</a></h1>
         </div>
 
         <div>
